# When_We_Work_bk

./: .dockerignore  .env  Dockerfile  PROJECT_SETUP_PROMPT.md  README.md  docker-compose.supabase.yml  docker-compose.yml  pyproject.toml
.cursor/: .rules.mdc
alembic/versions/: 07ce0abf4a09_updated_job_modal.py  1f985f9fc10f_modal_update.py  24e6df81396e_update_schema.py  34d9db299749_updated_job_modal.py  3d10c629cb78_job_application_modal_update.py  417c318b24d3_updated_job_modal.py  418ff99b3a8c_initial_setup.py  69c50d01fcde_updated_job_modal.py  a1b2c3d4e5f6_add_applied_to_job_application_status.py  add_pending_to_workstatus.py  bfb9cb0cb355_updated_job_modal.py  c9978bf961ba_initial_migration_add_tables.py  cbd2cee83d09_job_application_model.py  cf5f00f751b6_admin_login.py  dafe5fd5e2f1_job_application_modal.py  e0551cca5b93_user_modal.py  ec46f5ea3035_update_worker_modal.py  eda546616966_modal_and_api_access_control.py  f7415da237fe_updated_job_modal.py  fa04801ba017_job_application_modal_update.py  fe92a5ffa707_job_application_modal.py
app/: config.py  main.py
app/core/: auth.py  email.py  logging.py  pending_registration.py  response.py  security.py
app/db/: base.py  session.py  supabase.py
app/entities/: __init__.py
app/entities/admin/: model.py  schema.py  service.py
app/entities/business/: model.py  schema.py  service.py
app/entities/job_application/: model.py  schema.py  service.py
app/routes/: __init__.py  admin.py  auth.py  business.py  job_applications.py  jobs.py  staff.py  user.py  workers.py
scripts/: script.sh
(+14 files in other folders)
